cabal-version:      3.4
name:               yt
version:            0.1.1.0

license:            AGPL-3.0-only
author:             Miezhiko
maintainer:         Miezhiko
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable yt
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:
        base
      , aeson
      , yaml
      , text
      , bytestring
      , time
      , http-types
      , http-client
      , http-client-tls
      , case-insensitive
      , optics
      , aeson-optics
  default-extensions:
    CPP
    LambdaCase
    OverloadedStrings
    MultiWayIf
    UnicodeSyntax
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    ViewPatterns
    AllowAmbiguousTypes
